--- a/src/App.css
+++ b/src/App.css
@@ -1,26 +1,15 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-direction:column;
+  padding-left: 20%;
+  padding-right: 20%;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.Container{
+  border: 2px black;
+  margin: 5%;
 }
 
 @keyframes App-logo-spin {
